--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -25,9 +25,9 @@ body {
   border-radius: 20px;
   margin-top: 60px;
 }
-.link-logo {
-  width: 64px;
-  margin-bottom: 32px;
+.magink-logo {
+  height: 45px;
+  margin-right: 16px;
 }
 form {
   width: 100%;
